--- a/Markdown2Rtf.csproj
+++ b/Markdown2Rtf.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.44.0" />
+    <PackageReference Include="System.Drawing.Common" Version="10.0.1" />
   </ItemGroup>
 
 </Project>
